mdapi/Custom/objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Not Done</fullName>
                </value>
                <value>
                    <fullName>Prework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_1_Started__c</fullName>
        <label>Survey 1 Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_1_Status__c</fullName>
        <label>Survey 1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Unfinished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_2_Started__c</fullName>
        <label>Survey 2 Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_2_Status__c</fullName>
        <label>Survey 2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Unfinished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <description>Link to the survey.</description>
        <label>Survey URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <formula>If ( ISBLANK ( Contact__c ), 0, 100 ) +
If ( OR ( TEXT ( Status__c ) = &quot;Started&quot;, TEXT ( Status__c ) = &quot;Complete&quot; ), 10, 
If ( OR ( TEXT ( Status__c ) = &quot;Cancelled&quot;, TEXT ( Status__c ) = &quot;Suspended&quot;, TEXT ( Status__c ) = &quot;Pending&quot;, TEXT ( Status__c ) = &quot;Not Done&quot;, TEXT ( Status__c ) = &quot;Prework&quot; ), 5, 0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order_ID__c</fullName>
        <label>Work Order ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Service Request</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A{000000000}</displayFormat>
        <label>A#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>